k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld2
  labels : # labels to select/identify the deployment
      app: helloworld2
spec:
  replicas: 2
  selector:
      matchLabels:
          app: helloworld2
  template:
    metadata:
      labels:
        app: helloworld2
    spec:
      containers:
      - name:  helloworld2
        image: efecanaltay/helloworld2
        ports:
         - containerPort: 3000
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld2
  labels : # labels to select/identify the deployment
    app: helloworld2
spec:
  selector:
    app: helloworld2
  ports:
  - protocol: TCP
    name : frontend
    port: 3000
    targetPort: 3000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: hello-ingress
    namespace: default
spec:
  rules:
  - host: mobile.helloworld.com
    http:
      paths:
      - backend:
          serviceName: helloworld2
          servicePort: 3000
  - host: helloworld.com
    http:
      paths:
      - path : /
        backend:
          serviceName: helloworld
          servicePort: 3000
      - path: /mobile 
        backend:
          serviceName: helloworld2
          servicePort: 3000
