k8s/hello-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: hello-ingress
    namespace: default
spec:
  rules:
  - host: helloworld.com
    http:
      paths:
      - backend:
          serviceName: helloworld
          servicePort: 3000
